triviagame/force-app/main/default/objects/ParticipantActivity__e/ParticipantActivity__e.object-meta.xml
<CustomObject>
    <description>Salesforce Trivia Multiplayer Game: any events emitted due to participants joining the game/registering their details etc.</description>
    <label>ParticipantActivity</label>
    <pluralLabel>ParticipantActivity</pluralLabel>
</CustomObject>