triviagame/force-app/main/default/objects/ParticipantActivity__e/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>Salesforce Trivia Multiplayer Game: event payload</description>
    <label>Payload</label>
    <length>255</length>
    <type>Text</type>
</CustomField>