triviagame/force-app/main/default/objects/ParticipantActivity__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Salesforce Trivia Multiplayer Game: type of the event</description>
    <label>Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>